input.webkitEntries does not work as expected when folder contains accented chars https://bugs.webkit.org/show_bug.cgi?id=184517 <rdar://problem/39265537>

Reviewed by Ryosuke Niwa.

Source/WebCore:

Use String::fromUTF8() to construct a WTF String from the char* returned by
dirname() in FileSystem::directoryName(). Previously, we were just calling
the String constructor, which would treat the input as latin 1 instead of
UTF-8.

Test: fast/forms/file/entries-api/webkitEntries-nonascii-folder-name.html

* platform/posix/FileSystemPOSIX.cpp:
(WebCore::FileSystem::directoryName):

LayoutTests:

Add layout test coverage.

* fast/forms/file/entries-api/webkitEntries-nonascii-folder-name-expected.txt: Added.
* fast/forms/file/entries-api/webkitEntries-nonascii-folder-name.html: Added.


Canonical link: https://commits.webkit.org/200071@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230554 268f45cc-cd09-0410-ab3c-d52691b4dbfc